# termux-setmeup

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package.json
.github/actions/wait-for-workflow/: action.yml
.github/workflows/: publish-crates.yml  publish-npm.yml  release-termux-aarch64.yml  rust-ci.yml
res/: extra-packages.txt  my-apt.conf
scripts/: build-local.sh  gen-ssh-key.sh  npm-postinstall.js  push-tag.sh  run-rustci-remote.sh  run-rustci.sh  set-repo-vars.sh  setup-rust-mingw-scoop.ps1  sync-remote.sh
src/: actions.rs  main.rs  runner.rs
